--- a/index.html
+++ b/index.html
@@ -74,19 +74,14 @@
             <div class="col-4">
                 <div class="weatherItem bg-secondary" id="item2">
                     <div class="container">
-                        <div class="itemHeader d-flex justify-content-between">
+                        <div class="itemHeader d-flex justify-content-center mb-4">
                             <div>day</div>
-                            <div>date</div>
                         </div>
-                        <div class="itemBody">
-                            <h3 class="my-3">location</h3>
-                            <h2 class="my-3">degree <span>icon</span></h2>
-                            <div class="my-2">state</div>
-                            <div class="my-2">
-                                <span><i></i>data</span>
-                                <span><i></i>data</span>
-                                <span><i></i>data</span>
-                            </div>
+                        <div class="itemBody d-flex flex-column align-items-center">
+                            <div>icon</div>
+                            <h3>degree</h3>
+                            <h5>degree</h5>
+                            <h4 class="pb-3">staus</h4>
                         </div>
                     </div>
                 </div>
@@ -94,19 +89,14 @@
             <div class="col-4">
                 <div class="weatherItem bg-body-secondary" id="item3">
                     <div class="container">
-                        <div class="itemHeader d-flex justify-content-between">
+                        <div class="itemHeader d-flex justify-content-center mb-4">
                             <div>day</div>
-                            <div>date</div>
                         </div>
-                        <div class="itemBody">
-                            <h3 class="my-3">location</h3>
-                            <h2 class="my-3">degree <span>icon</span></h2>
-                            <div class="my-2">state</div>
-                            <div class="my-2">
-                                <span><i></i>data</span>
-                                <span><i></i>data</span>
-                                <span><i></i>data</span>
-                            </div>
+                        <div class="itemBody d-flex flex-column align-items-center">
+                            <div>icon</div>
+                            <h3>degree</h3>
+                            <h5>degree</h5>
+                            <h4 class="pb-3">staus</h4>
                         </div>
                     </div>
                 </div>
